# garmin-workout-creator

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
examples/: complete_workflow.py  parse_workout.py  reverse_engineer_format.py  simple_workout.py  tui_demo.py
src/garmin_workout_creator/: cli.py  main.py
src/garmin_workout_creator/garmin/: __init__.py  auth.py  client.py  converter.py
src/garmin_workout_creator/models/: __init__.py  step.py  target.py  workout.py
src/garmin_workout_creator/parsers/: __init__.py  base.py  regex_parser.py
src/garmin_workout_creator/static/: app.js  index.html  styles.css
src/garmin_workout_creator/tui/: app.py
src/garmin_workout_creator/tui/widgets/: __init__.py  metadata_form.py  workout_list.py
tests/test_models/: test_step.py  test_target.py  test_workout.py
tests/test_parsers/: test_regex_parser.py
