[tool.poetry]
name = "garmin-workout-creator"
version = "0.1.0"
description = "CLI tool for creating Garmin Connect workouts with natural language"
authors = ["Jose Duarte"]
readme = "README.md"
license = "MIT"
packages = [{include = "garmin_workout_creator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.63.0"
garth = "^0.4.0"
garminconnect = "*"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
anthropic = "^0.25.0"
openai = "^1.0.0"
rich = "^13.0.0"
click = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^24.0.0"
ruff = "^0.3.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
garmin-workout = "garmin_workout_creator.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
